# ModelWatch

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: benchmark-monitoring.yml  build-and-deploy.yml
data/snapshots/: previous.json  price-drop-baselines.json  price-drop-state.json
docs/: cron-job-org.md
modelwatch/: __main__.py  aa_scores.py  alias_cleanup.py  api_health.py  benchmark_health.py  build.py  check_build_health.py  data_repair.py  discover_benchmark_urls.py  fetch.py  history.py  http.py  json_output.py  model_filters.py  new_models.py  price_baselines.py  price_drop_state.py  price_events.py  price_parsing.py  pricing.py  pricing_glitch.py  provider_stats.py  schemas.py  stable_output.py
tests/: test_aa_scores.py  test_alias_cleanup.py  test_api_health.py  test_benchmark_health.py  test_build_integration.py  test_build_stats.py  test_check_build_health.py  test_data_repair.py  test_discover_benchmark_urls.py  test_fetch.py  test_history.py  test_io_helpers.py  test_json_output.py  test_model_filters.py  test_new_models.py  test_price_baselines.py  test_price_drop_dedupe.py  test_price_drop_state.py  test_price_events.py  test_price_events_alias_filter.py  test_pricing.py  test_pricing_glitch.py  test_pricing_reference.py  test_provider_stats.py  test_stable_output.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/public/: 404.html
web/public/data/: meta.json  models.json  new-model-events.jsonl  (+4 more)
web/src/: App.tsx  index.css  main.tsx  types.ts
(+466 files in other folders)
