[project]
name = "modelwatch"
version = "0.1.0"
description = "OpenRouter model dashboard data pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "mypy>=1.14.0",
]

[project.scripts]
modelwatch-build = "modelwatch.build:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modelwatch"]

[tool.uv]
required-version = ">=0.11.17"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = true
disallow_untyped_defs = true
warn_return_any = true
